Contact page updated

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     rel="stylesheet">
     <style>
       
-      
+      html {
+  scroll-behavior: smooth;
+}
 
 :root {
 
@@ -1067,7 +1069,7 @@ color: #666;
 
 
           <li class="navbar-item">
-            <a href="/Contact.html" class="navbar-link" data-navbar-link>Contact Us</a>
+            <a href="#footer" class="navbar-link" data-navbar-link>Contact Us</a>
           </li>
 
         </ul>
