title icon updated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+<link rel="icon" href="https://res.cloudinary.com/dl7vvhgvw/image/upload/w_1000,c_fill,ar_1:1,g_auto,r_max,bo_5px_solid_red,b_rgb:262c35/v1737312579/BuildSoft_Chatgpt_aklyfi.webp" type="image/icon type">
 
   <!-- 
     - custom css link
