--- a/index.html
+++ b/index.html
@@ -1558,7 +1558,8 @@ color: #666;
             </div>
 
             <address class="footer-item-link">
-             NexUs CoWork, Mokha Tower, Trimurti Nagar, Ring Road, Nagpur, India- 440022
+            B-5 Shiva-yatan Complex, Wardha Rd, Somalwada square,somalwada Nagpur - 440025
+
             </address>
 
           </li>
