legal pages updated

--- a/index.html
+++ b/index.html
@@ -1491,33 +1491,37 @@ color: #666;
 
         </ul>
 
-        <ul class="footer-list">
+          <ul class="footer-list">
 
-          <li>
-            <p class="footer-list-title">Other links</p>
-          </li>
+            <li>
+              <p class="footer-list-title">Other links</p>
+            </li>
 
-          <li>
-            <a href="#" class="footer-link">FAQ</a>
-          </li>
+            <li>
+              <a href="#" class="footer-link">FAQ</a>
+            </li>
 
-          <li>
-            <a href="#" class="footer-link">Portfolio</a>
-          </li>
+            <li>
+              <a href="#" class="footer-link">Portfolio</a>
+            </li>
 
-          <li>
-            <a href="#" class="footer-link">Privacy Policy</a>
-          </li>
+            <li>
+              <a href="privacy-policy.html" class="footer-link">Privacy Policy</a>
+            </li>
 
-          <li>
-            <a href="#" class="footer-link">Terms & Conditions</a>
-          </li>
+            <li>
+              <a href="terms-and-conditions.html" class="footer-link">Terms & Conditions</a>
+            </li>
 
-          <li>
-            <a href="#" class="footer-link">Support</a>
-          </li>
+            <li>
+              <a href="refund.html" class="footer-link">Refund</a>
+            </li>
 
-        </ul>
+            <li>
+              <a href="#" class="footer-link">Support</a>
+            </li>
+
+          </ul>
 
         <ul class="footer-list">
 
